# Vanta

./: .env.example  .gitignore  Makefile  PRD.md  README.md  alembic.ini  backlog.md  data_model.md  docker-compose.yml  master_plan.md  pyproject.toml  sprint_plan.md
apps/: __init__.py
apps/api/: __init__.py  config.py  main.py
apps/api/alembic/: env.py  script.py.mako
apps/api/db/: session.py  types.py
apps/api/models/: __init__.py  application.py  application_note.py  audit_log.py  company.py  enums.py  event.py  hidden_posting.py  integration_account.py  job_posting.py  model_io.py  model_run.py  notification.py  outreach.py  posting_enrichment.py  profile.py  resume_version.py  search_pref.py  task.py  user.py  user_event.py
apps/api/routers/: __init__.py  applications.py  auth.py  feed.py  notifications.py  onboarding.py  profiles.py  resumes.py  search_prefs.py  system.py  tasks.py
apps/api/schemas/: application.py  notification.py  onboarding.py  profile.py  resume.py  search_pref.py  task.py
apps/api/services/: __init__.py  digest.py  ingestion.py  matching.py  onboarding.py  providers.py  resume_parser.py  resume_tailor.py  storage.py  task_rules.py
apps/api/tests/: conftest.py  test_applications.py  test_auth.py  test_digest.py  (+15 more)
apps/web/: .eslintrc.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
apps/workers/: __init__.py  app.py
infra/docker/: api.Dockerfile  start-api.sh  start-web.sh  start-worker.sh  web.Dockerfile  worker.Dockerfile
(+33 files in other folders)
