[tool.poetry]
name = "vanta"
version = "0.1.0"
description = "AI-assisted job search platform"
authors = ["Vanta Team <team@vanta.example>"]
license = "Proprietary"
readme = "README.md"
packages = [
  { include = "apps" }
]

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "0.115.0"
uvicorn = { extras = ["standard"], version = "0.30.3" }
sqlalchemy = "2.0.35"
psycopg = { version = "3.1.19", extras = ["binary"] }
alembic = "1.13.2"
pydantic = "2.9.2"
pydantic-settings = "2.4.0"
python-multipart = "0.0.9"
celery = "5.4.0"
redis = "5.0.8"
httpx = "0.27.0"
tenacity = "9.0.0"
loguru = "0.7.2"
boto3 = "1.35.23"
structlog = "24.2.0"
email-validator = "2.2.0"
fastapi-pagination = "0.12.26"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
ruff = "0.6.8"
black = "24.8.0"
mypy = "1.11.2"
coverage = "7.6.1"
types-redis = "4.6.0.20240819"
types-python-dateutil = "2.9.0.20240316"

[tool.poetry.scripts]
vanta-api = "apps.api.main:run"
vanta-worker = "apps.workers.app:run"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.ruff]
line-length = 100
src = ["apps"]

[tool.mypy]
python_version = "3.12"
packages = ["apps.api", "apps.workers"]
warn_unused_configs = true
pretty = true

[[tool.mypy.overrides]]
module = ["boto3", "botocore", "botocore.*"]
ignore_missing_imports = true
